--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ eurovis_paper.pdf
 texput.log
 eurovis_paper.tcp
 eurovis/eurovis.tps
+BioVis/BioVis_BMC_template/ligand.tex.bak
+BioVis/BioVis_BMC_template/ligand.synctex.gz
+BioVis/BioVis_BMC_template/ligand.aux
+BioVis/BioVis_BMC_template/ligand.pdf
+BioVis/BioVis_BMC_template/ligand.log
