Pseudocode of simplification started

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ BioVis/BioVis_BMC_template/ligand.synctex.gz
 BioVis/BioVis_BMC_template/ligand.aux
 BioVis/BioVis_BMC_template/ligand.pdf
 BioVis/BioVis_BMC_template/ligand.log
+BioVis/BioVis_BMC_template/biovis.tps
+BioVis/BioVis_BMC_template/ligand.bbl
+BioVis/BioVis_BMC_template/ligand.blg
