--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ BioVis/BioVis_BMC_template/ligand.log
 BioVis/BioVis_BMC_template/biovis.tps
 BioVis/BioVis_BMC_template/ligand.bbl
 BioVis/BioVis_BMC_template/ligand.blg
+*.bak
