--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ BioVis/BioVis_BMC_template/biovis.tps
 BioVis/BioVis_BMC_template/ligand.bbl
 BioVis/BioVis_BMC_template/ligand.blg
 *.bak
+BioVis/BioVis_BMC_template/~$enario.docx
