case: some nonsense about hydrophobicity profile

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ BioVis/BioVis_BMC_template/ligand.bbl
 BioVis/BioVis_BMC_template/ligand.blg
 *.bak
 BioVis/BioVis_BMC_template/~$enario.docx
+eurovis_paper.synctex.gz
